--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,18 +7,14 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.css"
-      integrity="sha512-2fuz5SZm+ilUXvkAiuhKoQcWBkZqRAEKhBnlIioPGOBju8E1+C6MwtpvNt/pidBXgDTU/liw70r4/4X1YJ46BQ=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.css" />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.modules.min.js"
-  integrity="sha512-/FgXwXOupNXogdG0rL5MVZZhjD5kX0MphtnZ69XXls7RVTQBKYIkLD0zChti/eqKlpaDOoyQ3Q5D00VTqKCnUg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.js"></script>
   <script src="./js/02-lightbox.js" type="module"></script>
   </body>
 </html>
